<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeProfileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_vertical"
                    android:background="#00000000"
                    android:padding="0dp"
                    app:icon="@drawable/ic_manage_accounts_black_24dp"
                    android:text="@string/home_profile_button"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    app:iconGravity="top"
                    app:iconPadding="0dp"
                    app:iconSize="150dp"
                    app:iconTint="@color/quantum_grey800"
                    tools:ignore="RtlCompat" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/homeFriendsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_vertical"
                    android:background="#00000000"
                    android:padding="0dp"
                    app:icon="@drawable/ic_baseline_emoji_people_24"
                    app:iconGravity="top"
                    android:text="@string/home_friends_button"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    app:iconPadding="0dp"
                    app:iconSize="150dp"
                    app:iconTint="@color/quantum_grey800"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/track_friends_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_vertical"
                    android:background="#00000000"
                    android:padding="0dp"
                    app:icon="@drawable/ic_groups_black_24dp"
                    app:iconGravity="top"
                    android:text="@string/home_groups_button"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    app:iconPadding="0dp"
                    app:iconSize="150dp"
                    app:iconTint="@color/quantum_grey800"
                    tools:ignore="RtlCompat" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bookmark_home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center_vertical"
                    android:background="#00000000"
                    android:padding="0dp"
                    app:icon="@drawable/ic_outline_bookmarks_24"
                    app:iconGravity="top"
                    android:text="@string/home_bookmark_button"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    app:iconPadding="0dp"
                    app:iconSize="150dp"
                    app:iconTint="@color/quantum_grey800"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</FrameLayout>