<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/navigation_menu_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_selector"
        android:title="@string/navigation_menu_map" />


    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/feed_selector"
        android:title="@string/navigation_menu_feed" />
</menu>