...
        android:checkable="true"
        app:backgroundTint="@color/navigation_bar_background"
        app:icon="@drawable/gps_button_selector"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/map_switch_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map_switch_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
...
        android:src="@android:drawable/ic_menu_compass"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/map_switch_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_feed_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp">

        <FrameLayout
            android:id="@+id/map_feed_fragment"
...
