<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_settings"
        android:title="Settings"
        app:showAsAction="always"
        android:windowActionBarOverlay="false"
        android:icon="@drawable/ic_settings_white_24dp"/>
</menu>