<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_organization_button"
        android:title="@string/add_organization_button_text"
        app:showAsAction="always"
        />
</menu>
